--- a/src/Components/Common/FourOFourDetails.css
+++ b/src/Components/Common/FourOFourDetails.css
@@ -1,7 +1,15 @@
 .container {
-  background-color: rgb(38 42 55);
-  height: 100%;
+  height: 100vh;
   width: 100%;
   text-align: center;
   color: white;
+}
+
+.container h2 {
+  padding-top: 50px;
+}
+
+.back-link {
+  color: white;
+  font-size: 16px;
 }
