--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Handlee&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat Alternates";
+  background-color: rgb(38 42 55);
+  color: white;
+  font-family: "Handlee";
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: white;
+}
+
+span:hover {
+  color: rgb(61 191 197);
 }
