--- a/src/Components/Creations/Creations.css
+++ b/src/Components/Creations/Creations.css
@@ -11,10 +11,40 @@
   padding: 15px;
   text-align: center;
   background-color: rgb(61 191 197);
+  font-size: 20px;
 }
 
 .creation-card img {
   border-radius: 15px;
   width: 300px;
   height: 300px;
+}
+
+.creation-card h3 {
+  background-color: rgb(61 191 197);
+  padding-bottom: 5px;
+}
+.creation-card p {
+  background-color: rgb(61 191 197);
+  padding-bottom: 10px;
+}
+
+.details-card {
+  margin: 0 auto;
+  width: 50%;
+  margin-top: 100px;
+}
+
+.details-card button {
+  font-size: 16px;
+}
+
+.edit-and-delete-btn-sect {
+  background-color: rgb(61 191 197);
+}
+
+.edit-and-delete-btn-sect button {
+  margin-left: 20px;
+  margin-bottom: 10px;
+  font-size: 16px;
 }
