--- a/src/Components/Common/NavBar.css
+++ b/src/Components/Common/NavBar.css
@@ -17,6 +17,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: rgb(229 8 72);
+  font-size: 20px;
 }
 
 .navbar-container span {
