--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   font-family: "Montserrat Alternates";
   background-color: rgb(38 42 55);
   color: white;
