--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
   font-family: "Montserrat Alternates";
   background-color: rgb(38 42 55);
   color: white;
@@ -28,4 +27,5 @@ button {
 
 button:hover {
   background-color: rgb(229 8 72);
+  cursor: pointer;
 }
