--- a/src/Components/Common/NavBar.css
+++ b/src/Components/Common/NavBar.css
@@ -6,7 +6,7 @@
 
 .navbar-container {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 2fr 1fr;
   padding: 20px;
   background-color: rgb(229 8 72);
 }
@@ -21,5 +21,14 @@
 }
 
 .navbar-container span {
+  background-color: rgb(229 8 72);
+}
+
+.navbar-container img {
+  background-color: rgb(229 8 72);
+  width: 30px;
+}
+
+.navbar-container a {
   background-color: rgb(229 8 72);
 }
