--- a/src/Components/Auth/LandingPage.css
+++ b/src/Components/Auth/LandingPage.css
@@ -9,6 +9,31 @@
   margin-top: 50px;
 }
 
+.landing-container h1 {
+  font-size: 40px;
+}
+
 .landing-container a {
   background-color: rgb(38 42 55);
+}
+
+.landing-container p {
+  margin-top: 10px;
+  background-color: rgb(38 42 55);
+}
+
+.landing-container section p {
+  margin-top: 100px;
+  background-color: rgb(61 191 197);
+}
+
+.about-fiber {
+  font-size: 24px;
+  width: 80vw;
+  text-align: center;
+  padding: 15px;
+  margin-left: 10%;
+  color: white;
+  background-color: rgb(61 191 197);
+  border-radius: 15px;
 }
