Add to cart button disappears when item is added to cart, and remove from cart pops up in its place with full functionality to remove item from cart

--- a/src/Components/Common/Cart.css
+++ b/src/Components/Common/Cart.css
@@ -66,3 +66,12 @@
   text-align: center;
   margin-top: 50px;
 }
+
+.remove-from-cart {
+  margin-right: 10px;
+  color: rgb(229 8 72);
+}
+
+.remove-from-cart:hover {
+  color: white;
+}
